#       • the mpslimload is used for on ribbons on the gene page (http://www.informatics.jax.org/marker/MGI:105043)
#       The slimload also specifies which MP headers should appear in the ribbon. The slim set leaves out “phenotype not analyzed” and “normal phenotype”.
#

TAG: vocload-6-0-22-9
TAG: vocload-6-0-22-8
DATE: 03/29/2023
STAFF: lec
CHANGES:
wts2-1147/fl2-270/vocload/emap duplicate ACC_Accession issue
backing out this change

TAG: vocload-6-0-22-7
DATE: 02/03/2023
STAFF: lec
CHANGES:
wts2-1115/fl2-178/remove harold.drabkin
GO.config

TAG: vocload-6-0-22-6
TAG: vocload-6-0-22-5
DATE: 01/30/2023
STAFF: lec
fl2-170/add "driver_component" to RV.rcd

TAG: vocload-6-0-21-4
TAG: vocload-6-0-21-3
TAG: vocload-6-0-21-2
DATE: 08/15/2022
STAFF: lec
wts2-444/crm-364/some Ontology definitions not being displayed (TR13003)
loadTerm.py/processRecordChanges : bug in checking "record['note']" vs dbRecord['note']

TAG: vocload-6-0-21-1
DATE: 07/05/2022
TAG: vocload-6-0-22-1
DATE: 08/25/2022
STAFF: lec
wts2-964/EMAPA synonyms encased in apostrophes

TAG: vocload-6-0-21-4
TAG: vocload-6-0-21-3
TAG: vocload-6-0-21-2
DATE: 08/15/2022
STAFF: lec
wts2-444/crm-364/some Ontology definitions not being displayed (TR13003)
loadTerm.py/processRecordChanges : bug in checking "record['note']" vs dbRecord['note']

TAG: vocload-6-0-21-1
DATE: 07/05/2022
STAFF: lec
wts2-921/TSS_Region (SO:0001240) is obsolete

TAG: vocload-6-0-19-1
TAG: vocload-6-0-18-8
DATE: 04/07/2022, 04/11/2022
STAFF: lec
wts2-847/Incorporate colons into Theiler Stage designations (TS:#)

TAG: vocload-6-0-18-7
TAG: vocload-6-0-18-6
DATE: 03/22/2022, 03/24/2022
STAFF: lec
cre2022/biotype_vista.config, biotype_ensemblreg.config

TAG: vocload-6-0-18-5
TAG: vocload-6-0-18-4
DATE: 03/07/2022, 03/15/2022
STAFF: lec
wts2-811/vocload/emap/improve deleting emaps time
this hung up on Production, so commented out
#${PG_MGD_DBSCHEMADIR}/key/VOC_Term_drop.object
#${PG_MGD_DBSCHEMADIR}/key/VOC_Term_create.object
