@@ -528,7 +528,10 @@ class TermLoad:
 
         # delete the existing terms, and report how many were deleted.
         count = vocloadlib.countTerms(self.vocab_key)
-        vocloadlib.deleteVocabTerms(self.vocab_key, self.log)
+        # wts2-1147/fl2-270
+        #vocloadlib.deleteVocabTerms(self.vocab_key, self.log)
+        # do this instead; it's faster
+        db.sql('select * from VOC_deleteByVocab(%s)' % (self.vocab_key), None)
         self.log.writeline('deleted all (%d) remaining terms' % count)
 
         # look up the maximum keys for remaining items in VOC_Term and MGI_Synonym.
